--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "graham-campbell/github": "^7.8",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "php-http/guzzle6-adapter": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
